2001-04-30  Adam Fedor  <fedor@gnu.org>

	* Source/behavior.m: Rewrite to work with NeXT runtime.
	* Headers/gnustep/base/objc-gnu2next.h: Add some extra translations.

2001-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: parseQuotedString() handle \U escape sequences
	of eight digit hex encoded unicode values.
	([descriptionWithLocale:indent:to@]) handle unicode strings by using
	\U escape sequences in output C string.

2000-04-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m: 
	Corrected bug in last optimization for the parsing of property
	list. Now the bitmap representation is retained not the
	characterset itself. This did cause undeterministic problems when
	reading in the Info.plist.

2001-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Use RETAIN/RELEASE
	* Source/GSLocale.m: Set up NSDecimalSeparator and NSThousandsSeparator
	from locale if possible.  Fix bug dereferencing nil pointer.
	* Source/GSFormat.m: Hack to rewrite output from sprintf of floats and
	doubles to use the value in NSDecimalSeparator.

2001-04-27  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSString.m: Minor optimization for parsing property
	lists: cache the bitmap representation of hexdigit, quotable and
	whitespace character sets, and use it directly to determine
	whether a character is member or not of these sets.
	
2001-04-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([+initialize]) protect with flag so it is safe
	to call this method more than once.
	* Source/externs.m: GSBuildStrings() call +initialize method for
	NSString to ensure that the class is properly initialised even if
	this function has been called from NSObjects +initialize, which was
	in turn called in preparation for NSString initialisation!

2001-04-25  Adam Fedor  <fedor@gnu.org>

	* configure.in: Much simplified NeXT checks. Just use LIBRARY_COMBO
	to check runtime.
	* Source/o_vscanf.c: Remove objc-gnu2next.h
